# vla_ws

src/lerobot/communication/: package.xml  setup.py
src/lerobot/communication/communication/: pyserial.py
src/lerobot/description_lerobot/: CMakeLists.txt  package.xml
src/lerobot/description_lerobot/gazebo/: box.world
src/lerobot/description_lerobot/gazebo/unit_box/: model.sdf
src/lerobot/description_lerobot/gazebo/unit_box/unit_box/: model.sdf
src/lerobot/description_lerobot/launch/: gazebo.launch.py  lerobot_camera.launch.py  rviz.launch.py  rviz.launch.xml  rviz_camera.launch.py
src/lerobot/description_lerobot/rviz/: lerobot_rviz.rviz
src/lerobot/description_lerobot/urdf/: lerobot_camera.urdf  lerobot_camera1.urdf  rviz_lerobot_camera.urdf  so_arm_100_5dof.urdf  so_arm_100_5dof.urdf.xacro  so_arm_100_5dof_arm.urdf.xacro
src/lerobot/moveit_config/: .setup_assistant  package.xml
src/lerobot/moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  so_arm_100_5dof.ros2_control.xacro  so_arm_100_5dof.srdf  so_arm_100_5dof.urdf.xacro
src/lerobot/moveit_config/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/lerobot/yolo_grasp/: CMakeLists.txt  package.xml
src/lerobot/yolo_grasp/src/: yolo_detect_box.py
